--- a/index.html
+++ b/index.html
@@ -22,21 +22,36 @@
 </header>
 
 <section id = "about">
-    <h2>About Me:</h2>
+    <div class = "about-content"> 
+        <img src = "image.jpg"  alt = "Picture">
+       
+    <hr>
+        <div class = "about-text>" <h1>About Me:</h1> 
+    <hr>
     <p> I am a game developer specializing in Python and Godot Engine. </p> 
-    <p> I am currently a student in De La Salle University taking up the course Bachelor in Science Interactive Entertainment Major in Game Development. </p>
+    <p> I am currently a student in De La Salle University taking up the course </p>
+    <p> <i>Bachelor in Science Interactive Entertainment Major in Game Development. </i> </p>
+        </div>
+    </div>
 
 <section id = "portfolio">
     <h2>Portfolio:</h2>
     <!-- add game project thumbnails and descriptions here -->
- </section>
+    
+</section>
  
  <section id = "contact">
     <h2> Contact: </h2>
+    <p> You can contact me via email at <a href = "mailto:ericamaurizb@gmail.com">ericamaurizb@gmail.com </a></p>
     <p> Contact number: +63 995 373 9016 </p>
     <p> Github: <li> <a href = https://github.com/erica-codes target="_blank"> @erica-codes </a> </li></p>
+</section>
 
-</section>
-</section>
+<footer> 
+    <p>&copy; 2023 Barundia </p>
+</footer>
+
+<script src = "script.js"> </script>
+
 </body>
 </html>
