--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <section id = "about">
     <div class = "about-content"> 
-        <img src = "image.jpg"  alt = "Picture">
+        <img src = "https://github.com/erica-codes/erica-codes.github.io/blob/main/image.jpg"  alt = "Picture">
        
     <hr>
         <div class = "about-text>" <h1>About Me:</h1> 
@@ -48,7 +48,7 @@
 </section>
 
 <footer> 
-    <p>&copy; 2023 Barundia </p>
+    <p> &copy; 2023 Barundia </p>
 </footer>
 
 <script src = "script.js"> </script>
