--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             My Game Development Portfolio
         </title>
         <link rel = "stylesheet" href = "styles.css">
+        <link rel = "icon" href = "https://github.com/erica-codes/erica-codes.github.io/blob/main/icon.png">
     </head>
 
 <body>
