--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
             My Game Development Portfolio
         </title>
         <link rel = "stylesheet" href = "styles.css">
-        <link rel = "icon" href = "https://github.com/erica-codes/erica-codes.github.io/blob/main/icon.png">
+        <link rel = "icon" href = "icon.png">
+        
     </head>
 
 <body>
@@ -24,7 +25,7 @@
 
 <section id = "about">
     <div class = "about-content"> 
-        <img src = "https://github.com/erica-codes/erica-codes.github.io/blob/main/image.jpg"  alt = "Picture">
+        <img src = "image.jpg"  alt = "Picture">
        
     <hr>
         <div class = "about-text>" <h1>About Me:</h1> 
@@ -49,7 +50,7 @@
 </section>
 
 <footer> 
-    <p> &copy; 2023 Barundia </p>
+    <p>&copy; 2023 Barundia </p>
 </footer>
 
 <script src = "script.js"> </script>
