--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>
             My Game Development Portfolio
         </title>
-        <link rel = "stylesheet" href = "styles.css">
-        <link rel = "icon" href = "icon.png">
+        <link rel = "stylesheet" href = "styles/styles.css">
+        <link rel = "icon" href = "images/icon.png">
         
     </head>
 
@@ -25,7 +25,7 @@
 
 <section id = "about">
     <div class = "about-content"> 
-        <img src = "image.jpg"  alt = "Picture">
+        <img src = "images/image.jpg"  alt = "Picture">
        
     <hr>
         <div class = "about-text>" <h1>About Me:</h1> 
