--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>
             My Game Development Portfolio
         </title>
-        <link rel = "stylesheet" href = "styles/styles.css">
-        <link rel = "icon" href = "images/icon.png">
+        <link rel = "stylesheet" href = "https://github.com/erica-codes/erica-codes.github.io/blob/main/styles/styles.css">
+        <link rel = "icon" href = "https://github.com/erica-codes/erica-codes.github.io/blob/main/images/icon.png">
         
     </head>
 
@@ -25,7 +25,7 @@
 
 <section id = "about">
     <div class = "about-content"> 
-        <img src = "images/image.jpg"  alt = "Picture">
+        <img src = "https://github.com/erica-codes/erica-codes.github.io/blob/main/images/image.jpg"  alt = "Picture">
        
     <hr>
         <div class = "about-text>" <h1>About Me:</h1> 
@@ -53,7 +53,7 @@
     <p>&copy; 2023 Barundia </p>
 </footer>
 
-<script src = "script.js"> </script>
+<script src = "https://github.com/erica-codes/erica-codes.github.io/blob/main/styles/script.js"> </script>
 
 </body>
 </html>
